# siplusplus

./: CMakeLists.txt  LICENSE  README.md  demo.cpp
include/si++/: Rational.cppm  format.h  si++.cppm
